Remove some code smell